<?xml version="1.0" encoding="utf-8"?>

<!--  <item
      android:id="@+id/Standard"
      android:title="Standard" />
  <item
      android:id="@+id/High"
      android:title="High" />

  <item
      android:id="@+id/Original"
      android:title="Original" />-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Standard"
            android:orderInCategory="1"
            android:title="@string/standard_text"
            app:showAsAction="always" />

        <item
            android:id="@+id/High"
            android:orderInCategory="2"
            android:title="@string/hight_text"
            app:showAsAction="always" />

        <item
            android:id="@+id/Original"
            android:orderInCategory="3"
            android:title="@string/original_text"
            app:showAsAction="always" />
    </group>
</menu>