<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="120dp"
    android:background="@color/shadow"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:text="@string/tv_type"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/tv_size"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/dimensions"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_dimen"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white" />
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"/>

        </TableRow>

    </TableLayout>


</LinearLayout>
