<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/imgBack"
            android:padding="16dp"
            android:tint="@color/black"
            android:src="@drawable/nav_back_ic"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <EditText
        android:id="@+id/edOldPass"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:textColorHighlight="@color/mdtp_accent_color" />

    <EditText
        android:id="@+id/edNewPass"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:textColorHighlight="@color/mdtp_accent_color" />

    <EditText
        android:id="@+id/edConfirmPass"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:textColorHighlight="@color/mdtp_accent_color" />

    <Button
        android:id="@+id/btnChange"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
