<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_20"
        android:textColor="@color/btn_auto_login"
        android:textSize="@dimen/dimen_17" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/autoLoginMargin"
        android:layout_marginRight="@dimen/autoLoginMargin"
        android:layout_marginTop="@dimen/autoLoginMargin">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_server_site"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Company"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="User"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/autoLoginMargin"
        android:layout_marginRight="@dimen/autoLoginMargin"
        android:layout_marginTop="@dimen/autoLoginMargin"
        android:text="@string/logged"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp" />

    <View
        android:id="@+id/view_auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_05_1"
        android:layout_below="@+id/tv_message"
        android:layout_marginTop="@dimen/dimen_10_20"
        android:background="@color/ccc_color" />
    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_auto"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:textSize="@dimen/dimen_16_32" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:textSize="@dimen/dimen_16_32" />

        <TextView
            android:id="@+id/btn_no_auto"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/btn_auto_login"
            android:textSize="@dimen/dimen_16_sp" />

        <TextView
            android:id="@+id/btn_yes_auto"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/btn_auto_login"
            android:textSize="@dimen/dimen_16_sp" />
    </LinearLayout>
</LinearLayout>
