<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_btn_white_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">


        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/gmarketsans_medium"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="content"
        android:textSize="16sp"
        android:fontFamily="@font/gmarketsans_medium"
        android:gravity="center"
        android:textColor="@color/time_color_current_chat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_cancel"
            android:fontFamily="@font/gmarketsans_medium"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/string_ok"
            android:textColor="@color/button_login"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>