<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_imv"
            android:tint="@color/black"
            android:padding="16dp"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:src="@drawable/nav_back_ic" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/settings_crew_chat"
            android:textColor="@android:color/black"
            android:textSize="17sp" />


    </FrameLayout>

    <TextView
        style="@style/setting_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/notification_heading_background"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:text="@string/settings_chat_method"
        android:textColor="@color/notification_heading_text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_22"
            android:paddingTop="@dimen/padding_22"
            android:text="@string/enter_auto"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/sw_enter_auto"
            android:layout_alignParentRight="true"
            style="@style/setting_switch_compat"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/bg_switch"
            android:checked="true" />
    </RelativeLayout>

    <TextView

        style="@style/setting_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/notification_heading_background"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:text="@string/settings_screen_method"
        android:textColor="@color/notification_heading_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_rotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding_22"
            android:paddingLeft="@dimen/margin_normal"

            android:paddingTop="@dimen/padding_22"
            android:text="@string/screen_setting"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_screen_rotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingBottom="@dimen/padding_22"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingTop="@dimen/padding_22"
            android:text="@string/screen_setting"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/notification_heading_background" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_22"
            android:paddingTop="@dimen/padding_22"
            android:text="@string/enter_v_duty"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/sw_enter_v_duty"
            android:layout_alignParentRight="true"
            style="@style/setting_switch_compat"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/bg_switch"
            android:checked="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/notification_heading_background" />
</LinearLayout>